<resources>
    <string name="app_name">Think NOW!!</string>
    <string name="question">QUESTION</string>
    <string name="hint">Hint</string>
    <string name="hint_box">Check \"Hint\" if necessary!</string>
    <string name="hint_box_none">There are no hint.</string>
    <string name="initial_time">00</string>
    <string name="initial_alarm">00:00</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="resume">RESUME</string>
    <string name="finish">FINISH</string>
    <string name="setting">SETTING</string>
    <string name="return_btn">RETURN</string>
    <string name="save_btn">SAVE</string>
    <string name="next_question">Next</string>
    <string name="done">Finish</string>
    <string name="alarm_label">Alarm</string>
    <string name="timer_label">Answer Time</string>
    <string name="file_label">Question File</string>
    <string name="remind_label">Reminder</string>
    <string name="enable_txt">Enable</string>
</resources>
