<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/question_view"
        android:layout_width="304dp"
        android:layout_height="200dp"
        android:text="@string/question"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132" />

    <CheckBox
        android:id="@+id/hint_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint"
        app:layout_constraintTop_toTopOf="@+id/question_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintHorizontal_bias="0.15" />

    <TextView
        android:id="@+id/hint_box"
        android:layout_width="229dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/hint_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="@+id/hint_cb"
        app:layout_constraintTop_toTopOf="@+id/hint_cb"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/next_question_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_question"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hint_box"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/timer_box"
        android:layout_width="233dp"
        android:layout_height="55dp"
        android:text="@string/initial_alarm"
        android:textSize="50sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/next_question_button"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stop_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/timer_box"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_chainStyle="spread" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_button"
        app:layout_constraintTop_toTopOf="@+id/start_button"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_chainStyle="spread" />

    <Button
        android:id="@+id/setting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

</androidx.constraintlayout.widget.ConstraintLayout>
